--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
     const stores = [
       "TC東京", "秋葉原", "渋谷", "吉祥寺", "千葉", "成田", "大宮", "川崎",
       "横浜", "町田", "札幌", "仙台", "郡山", "高崎", "宇都宮", "水戸",
-      "新潟", "金沢", "甲府", "静岡", "名古屋", "TC大阪", "日本橋", "三宮",
-      "広島", "高松", "福岡"
+      "新潟", "金沢", "甲府", "静岡", "名古屋","大須", "TC大阪", "日本橋", "三宮",
+      "京都","広島", "高松", "福岡"
     ];
 
     // 店舗の英語スラッグ
@@ -344,9 +344,11 @@
       "甲府": "kofu",
       "静岡": "shizuoka",
       "名古屋": "nagoya",
+      "大須": "osu",      
       "TC大阪": "osaka",
       "日本橋": "nipponbashi",
       "三宮": "sannomiya",
+      "京都": "kyoto",
       "広島": "hiroshima",
       "高松": "takamatsu",
       "福岡": "fukuoka"
