--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>晴れる屋店舗検索 | URLジェネレーター</title>
+  <title>店舗検索 | URLジェネレーター</title>
   <style>
     :root {
       color-scheme: light;
@@ -338,9 +338,9 @@
 <body>
   <div class="page">
     <header>
-      <h1>晴れる屋店舗検索 URL ジェネレーター</h1>
+      <h1>店舗検索 URL ジェネレーター</h1>
       <p class="lede">
-        カード名を入力すると、晴れる屋各店舗の検索URLを一括生成します。
+        カード名を入力すると、各店舗の検索URLを一括生成します。
       </p>
     </header>
 
@@ -420,7 +420,7 @@
     </div>
 
     <footer style="margin-top: 40px; border-top: 1px solid var(--border); padding-top: 20px; text-align: center; font-size: 0.75rem; color: var(--text-sub);">
-      <p>晴れる屋店舗検索 URL ジェネレーター is unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.</p>
+      <p>店舗検索 URL ジェネレーター is unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.</p>
     </footer>
 
   </div>
